# mediscara.mdr

./: .gitignore  .gitmodules  .pylintrc  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
src/mdr/: __init__.py  json.py  main.py  model.py  yaml.py
tests/: test_json.py  test_yaml.py
tests/resources/: spec.yaml  yaml_test.yaml
