[metadata]
name = mdr
version = attr: mdr.__version__
author = Peter Puska
author_email = ppuska@lasram.hu

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.extras_require]
tests =
    pytest

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mdr = mdr.main:main